<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dip"
    android:background="#FFFFFFFF"
    android:stretchColumns="1" >

    <TableRow>
        <TextView
            android:text="@string/titulo"
            android:textColor="#FF000000"
            />
        <EditText
            android:id="@+id/editTitulo"
            android:inputType="text"
            android:maxLength="60" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/docente"
            android:textColor="#FF000000"/>
        <EditText
            android:id="@+id/editDocente"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/autor"
            android:textColor="#FF000000"/>
        <EditText
            android:id="@+id/editAutor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/editorial"
            android:textColor="#FF000000"/>
        <EditText
            android:id="@+id/editEditorial"
            android:inputType="text"
            android:maxLength="60" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/edicion"
            android:textColor="#FF000000"/>
        <EditText
            android:id="@+id/editEdicion"
            android:inputType="text"
            android:maxLength="60" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/isbn"
            android:textColor="#FF000000"/>
        <EditText
            android:id="@+id/editIsbn"
            android:inputType="text"
            android:maxLength="60" />
    </TableRow>
    <TableRow>
        <TextView android:text="@string/idioma"
            android:textColor="#FF000000"/>
        <EditText
            android:id="@+id/editIdioma"
            android:inputType="text"
            android:maxLength="60" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="actualizar"
            android:text="@string/actualizar" />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/actualizarPHP"
            android:onClick="servicioPHP"
            android:text="@string/actualizarPHP" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="limpiarTexto"
            android:text="@string/limpiar" />
    </TableRow>
    <TableRow>
        <Button
            android:onClick="regresar"
            android:text="@string/regresar" />
    </TableRow>
    <ListView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/listView1"> </ListView>
</TableLayout>