<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Eliminar equipo"
        android:textColor="#FF000000"/>
    <EditText
        android:id="@+id/editCodigo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="30"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:onClick="eliminarEquipo"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminarPHP"
        android:id="@+id/eliminarPHP"
        android:onClick="servicioPHP"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/limpiar"
        android:onClick="limpiarTexto"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regresar"
        android:onClick="regresar"/>
    <ListView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/listView1"> </ListView>
</LinearLayout>