<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/crudDocentes"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="9dp" />

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="wrap_content"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:lineSpacingExtra="36sp"
            android:text="@string/agregar" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="104dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:lineSpacingExtra="36sp"
                android:text="@string/docente"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="36sp"
                android:text="@string/actualizar"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:lineSpacingExtra="36sp"
                android:text="@string/eliminar"
                android:textSize="18sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="36sp"
                android:text="@string/docente1"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="40dp"
                android:layout_height="69dp"
                android:layout_gravity=""
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="36sp"
                android:text="@string/actualizar" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="40dp"
                android:layout_height="69dp"
                android:layout_gravity=""
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="36sp"
                android:text="@string/eliminar" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="36sp"
                android:text="@string/docente2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="40dp"
                android:layout_height="69dp"
                android:layout_gravity=""
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="36sp"
                android:text="@string/actualizar"
                tools:ignore="DuplicateIds" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="40dp"
                android:layout_height="69dp"
                android:layout_gravity=""
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="36sp"
                android:text="@string/eliminar"
                tools:ignore="DuplicateIds" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:lineSpacingExtra="36sp"
                android:text="@string/docente3"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="40dp"
                android:layout_height="69dp"
                android:layout_gravity=""
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="36sp"
                android:text="@string/actualizar"
                tools:ignore="DuplicateIds" />

            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="40dp"
                android:layout_height="69dp"
                android:layout_gravity=""
                android:layout_weight="1"
                android:gravity="center"
                android:lineSpacingExtra="36sp"
                android:text="@string/eliminar"
                tools:ignore="DuplicateIds" />


        </LinearLayout>

    </LinearLayout>




</LinearLayout>